fix the toc overlap source block

--- a/content/css/copy-to-clipboard.css
+++ b/content/css/copy-to-clipboard.css
@@ -89,3 +89,7 @@
     opacity: 1;
     transition: none;
 }
+
+.w-60 {
+    width: 60%;
+}
